[package]
name = "rest-nwc-bridge"
version = "0.1.0"
edition = "2021"
description = "HTTP-to-NWC gateway — a REST API that translates HTTP requests to Nostr Wallet Connect (NIP-47) calls"

[dependencies]
nwc = { path = "../nostr-rs-nwc/crates/nwc" }
nostr = { path = "../nostr-rs-nwc/crates/nostr", features = ["std", "nip47"] }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
